# pyweek36

./: .gitignore  .pre-commit-config.yaml  README.md  README_submission.md  contributing.md  pyproject.toml  requirements.txt  run_game.py
assets/#source/WIP/: test.aseprite
assets/#source/WIP/color_palette/: aquaverse.gpl  dustbyte.gpl  hazy-nebulae.gpl
assets/#source/WIP/level/: tileset.tsx
assets/#source/WIP/level/draft/: draft_level.tmx  draft_tileset.tsx  level_draft.tiled-session  tileset.tsx
assets/#source/WIP/level/level1/: level1.tiled-session  level1.tmx
assets/#source/WIP/player/#aseprite_files/: idle.aseprite  (+3 more)
assets/#source/WIP/player_projectile/: projectile.aseprite
assets/WIP/: game_story.md
assets/WIP/color_palette/: aquaverse.gpl
assets/WIP/level/: draft.tmx
assets/WIP/level/draft/: draft_level..tmj  draft_level.tmx  draft_tileset.tsx
assets/WIP/player/: slime.aseprite  slime3.aseprite
assets/WIP/player/#aseprite_files/: jump.aseprite
assets/WIP/player/walk/: slime.aseprite
assets/WIP/tileset/: tiles.aseprite
assets/level/: level1.tiled-session  level1.tmx  level2.tmx  level3.tmx  level4.tmx  tileset.tsx
assets/tiled/: Blocks.tsx  map.tmx
assets/tiled/levels/: demo.tmx  level1.tmx  level10.tmx  level2.tmx  level3.tmx  level4.tmx  level5.tmx  level6.tmx  level7.tmx  level8.tmx  level9.tmx  template.tmx
assets/tiled/tilesets/: background.tsx  blocks.tsx  dark_matter.tsx  player.tsx
pyweek36/: README_submission.md  __main__.py  constants.py  game.py  gui.py  main.py  sprites.py
src/: __main__.py  constants.py  sprites.py
(+27 files in other folders)
