[tool.poetry]
name = "pyweek36"
version = "0.1.0"
description = "Game project for the 36th week of PyWeek."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
